# aisstant

./: Cargo.toml  README.md
src/: generators.rs  main.rs  openai.rs
