[package]
name = "aisstant"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/daraber/aisstant"
authors = ["daraber"]
description = "Generate CLI commands from natural language"
categories = ["command-line-utilities"]

[dependencies]
openai_dive = "0.4.8"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
dialoguer = "0.11.0"